feat: Add the User edittion and delation
